db update db pass

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PASS=Drobotic@solutions
-DBPASS=Drobotic@solutions
+DBPASS="mongodb+srv://admin-login:Drobotic@solutions@cluster0.fdebt.mongodb.net/formdb"
